<resources>
    <string name="app_name">Metabolism Health Calculator</string>
    <string name="welcome">Welcome To The Metabolism and Health Calculator</string>
    <string name="enter_msg">Press Enter To Continue</string>
    <string name="calc">Calculate</string>

    <string name="menuWelcome">Welcome To The Main Menu</string>
    <string name="menuMsg">Please make a choice for what you want to calculate</string>
    <string name="metabTitle">Metabolism Calculator</string>
    <string name="goEnter">Enter</string>
    <string name="goMetab">Calculate Metabolism</string>

    <string name="bmiTitle">BMI Calculator</string>
    <string name="goBMI">Calculate BMI</string>
    <string name="BMIInstructions">Enter Your Weight in pounds, and Height in Inches</string>
    <string name="bmi_result">BMI Results:</string>

    <string name="spinnerTxt">How many days of the week do you work out?</string>

    <string-array name="workout_options">
        <item>5 days a week</item>
        <item>4 days a week</item>
        <item>3 days a week</item>
        <item>2 days a week</item>
        <item>1 day a week</item>
        <item>Do not workout</item>
    </string-array>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>